AI-Powered-Customer-Support-and-Service-Automation/objects/User_Cases__c.object
<CustomObject>
    <fields>
        <fullName>AI_Summary__c</fullName>
        <label>AI Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Category__c</fullName>
        <label>Issue Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>User Cases</relationshipLabel>
        <relationshipName>User_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>User Cases (Product)</relationshipLabel>
        <relationshipName>User_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>new</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>User Cases</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User Cases Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Damage_Requires_Priority</fullName>
        <active>true</active>
        <description>Ensures Damage requires to case is high.</description>
        <errorConditionFormula>AND( OR( ISPICKVAL(Issue_Category__c, &quot;Warranty&quot;), ISPICKVAL(Issue_Category__c, &quot;Delivery&quot;) ), ISBLANK(TEXT(Priority__c)) )</errorConditionFormula>
        <errorDisplayField>Priority__c</errorDisplayField>
        <errorMessage>Priority is mandatory for Damage cases.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Warranty_Delivery_Requires_Priority</fullName>
        <active>true</active>
        <description>Ensures Warranty and Delivery requires priority.</description>
        <errorConditionFormula>AND( OR( ISPICKVAL(Issue_Category__c, &quot;Warranty&quot;), ISPICKVAL(Issue_Category__c, &quot;Delivery&quot;) ), ISBLANK(TEXT(Priority__c)) )</errorConditionFormula>
        <errorMessage>Priority is mandatory for Warranty and Delivery cases.</errorMessage>
    </validationRules>
</CustomObject>